tests/arch/riscv/error/compiler/test_riscv_error_compiler_003.out


[E09] Error: Incorrect instruction syntax
    ╭─[ assembly:12:8 ]
    │
 12 │    add t0, t1
    │        ───┬──  
    │           ╰──── Incorrect syntax
    │ 
    │ Note: Allowed formats:
    │       add rd,rs1,rs2
────╯

The syntax `add rd,rs1,rs2` failed with the following reason:
Error: found `end of input` but expected `,`, `\n`, or `binary operator`
    ╭─[ assembly:12:14 ]
    │
 12 │    add t0, t1
    │            ─┬│ 
    │             ╰── While parsing this `expression`
    │              │ 
    │              ╰─ Unexpected input
────╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

